--- a/pages/home.html
+++ b/pages/home.html
@@ -149,6 +149,9 @@
             .legenda4 {
                 font-size: 19px;
             }
+            .espaço_botao{
+                margin-top: 50%;
+            }
 
         }
 
@@ -174,7 +177,10 @@
             .redcard {
                 padding: 15px;
             }
-
+            .espaço_botao{
+                margin-top: 50%;
+            }
+            
         }
 
         @media screen and (min-width: 1024px) {
@@ -201,6 +207,9 @@
             #fluid{
                 margin-top: 9%;
             }
+            .espaço_botao{
+                margin-top: 0%;
+            }
 
         }
 
@@ -226,6 +235,9 @@
             .legenda2 {
                 font-size: 30px;
                 text-align: center;
+            }
+            .espaço_botao{
+                margin-top: 0%;
             }
 
         }
