VAI DA TUDO CERTO!!

--- a/pages/ocorrencia.html
+++ b/pages/ocorrencia.html
@@ -171,7 +171,21 @@
                 height: 100%; */
             }
 
+        }
 
+        @media screen and (min-width: 200px) and (max-width:460px) {
+
+            .navbar-title {
+                font-size: 13PX;
+            }
+
+        }
+
+        @media screen and (min-width: 200px) and (max-width:405px) {
+
+            .navbar-title {
+                font-size: 10.6PX;
+            }
 
         }
     </style>
