--- a/pages/problemasuspeitos.html
+++ b/pages/problemasuspeitos.html
@@ -80,6 +80,36 @@
         .form-check-input:focus {
             box-shadow: none;
         }
+
+        .espaço_botao {
+            display: flex;
+            width: 100%;
+            height: 15vh;
+            justify-content: center;
+        }
+
+        .botao {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 90%;
+        }
+
+        @media screen and (min-width: 200px) and (max-width:460px) {
+
+            .navbar-title {
+                font-size: 13PX;
+            }
+
+        }
+
+        @media screen and (min-width: 200px) and (max-width:405px) {
+
+            .navbar-title {
+                font-size: 10.6PX;
+            }
+
+        }
     </style>
 </head>
 
@@ -366,6 +396,12 @@
                 </div>
             </div>
         </form>
+        <div class="espaço_botao">
+            <div class="botao">
+                <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
+                <button type="button" class="btn btn-outline-primary btn-lg">Proximo</button>
+            </div>
+        </div>
     </div>
 
     <script>
