--- a/pages/materiaisutilizados.html
+++ b/pages/materiaisutilizados.html
@@ -81,10 +81,10 @@
         }
 
         .column {
-            display: flex;
-            flex-direction: column;
+            /* display: flex; */
+            /* flex-direction: column; */
             width: 43%;
-            height: 100vh;
+            height: 20vh;
             box-sizing: border-box;
         }
 
@@ -110,6 +110,23 @@
             border: none;
             border-bottom: 2px solid rgb(6, 108, 243);
             width: 100%;
+        }
+
+        @media screen and (min-width: 375px) {
+            .text-line {
+                width: 50%;
+            }
+
+            .card-text {
+                font-size: 13px;
+            }
+        }
+
+
+        @media screen and (min-width: 768px) {
+            .text-line {
+                width: 15%;
+            }
         }
     </style>
 </head>
@@ -246,7 +263,7 @@
                 </div>
                 <br>
 
-                <div class="block px-3">
+                <!-- <div class="block px-3">
                     <div class="descrition d-flex mt-2" style="width: 100%;">
                         <label class="card-text mb-0">TALAS PAP.</label>
 
@@ -269,22 +286,8 @@
                         <input type="text" class="text-line">
                     </div>
                     <br>
-                </div>
-                <br>
+                </div> -->
 
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%;">
-                        <div class="form-check">
-                            <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-
-                        <div>
-                            <input type="text" class="text-line1">
-                        </div>
-                        <br>
-                        <br>
-                    </div>
-                </div>
             </div>
 
             <div class="column">
@@ -307,7 +310,7 @@
 
                 <div class="block px-3">
                     <div class="descrition d-flex mt-2" style="width: 100%;">
-                        <label class="card-text mb-0">CÂNULA</label>
+                        <label class="card-text mb-0 mt-1">CÂNULA</label>
 
                         <div class="form-check ms-3">
                             <input class="form-check-input" type="checkbox" name="soro" id="flexRadioDefault1">
@@ -321,38 +324,49 @@
                     <br>
                 </div>
                 <br>
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%;">
-                        <div class="form-check">
-                            <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
+            </div>
 
-                        <div>
-                            <input type="text" class="text-line1">
-                        </div>
-                        <br>
-                        <br>
+            <!-- <div class="block px-3">
+                <div class="descrition d-flex" style="width: 100%;">
+                    <div class="form-check mt-4">
+                        <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    </div>
+
+
+                    <div class="form-floating h-100" style="width: 100%; padding: 10px;">
+                        <textarea class="form-control h-100 p-2" placeholder="Leave a comment here"
+                            id="floatingTextarea2" style="height: 80%;"></textarea>
+                    </div>
+                </div>
+            </div> -->
+        </div>
+
+        <div class="align-items-center justify-content-center d-flex">
+            <div class="block px-3">
+                <div class="descrition d-flex mt-2" style="width: 100%;">
+                    <label class="card-text mb-0">TALAS PAP.</label>
+
+                    <div class="form-check ms-3">
+                        <input class="form-check-input" type="checkbox" name="soro" id="flexRadioDefault1">
                     </div>
                 </div>
                 <br>
-
-                <div class="block px-3">
-                    <div class="descrition d-flex" style="width: 100%;">
-                        <div class="form-check">
-                            <input name="grupo" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                        </div>
-
-                        <div>
-                            <input type="text" class="text-line1">
-                        </div>
-
-
-
-                    </div>
+                <div>
+                    <label class="card-text">TAMANHO:</label>
+                    <br>
+                    P
+                    <input type="checkbox" class="teste">
+                    G
+                    <input type="checkbox">
                 </div>
+                <br>
+                <div>
+                    <label class="card-text">QUANTIDADE:</label>
+                    <input type="text" class="text-line">
+                </div>
+                <br>
             </div>
         </div>
-
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"></script>
