--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -77,7 +77,7 @@
             border-radius: 5px;
         }
 
-        @media screen and (max-width: 1024px) {
+        /* @media screen and (max-width: 1024px) {
             .geral {
                 height: 100vh !important;
             }
@@ -91,9 +91,15 @@
 
         @media screen and (max-width: 767px) {
             .geral {
-                height: 100vh !important;
+                height: 80vh !important;
             }
         }
+
+        @media screen and (max-width: 500px) {
+            .geral {
+                height: 100vh !important;
+            }
+        } */
     </style>
 </head>
 
