--- a/pages/anamnese médica.html
+++ b/pages/anamnese médica.html
@@ -115,6 +115,22 @@
         width: 20%;
       }
     }
+    /* Tamanho titulo */
+    @media screen and (max-width:460px) {
+
+      .navbar-title {
+        font-size: 13PX;
+      }
+
+    }
+    /* Tamanho titulo */
+    @media screen and (max-width:405px) {
+
+      .navbar-title {
+        font-size: 10.6PX;
+      }
+
+    }
   </style>
 </head>
 
