--- a/pages/obsimportante.html
+++ b/pages/obsimportante.html
@@ -82,6 +82,24 @@
             border-color: rgb(6, 108, 243);
             box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
         }
+
+        /* Tamanho titulo */
+        @media screen and (max-width:460px) {
+
+            .navbar-title {
+                font-size: 13PX;
+            }
+
+        }
+
+        /* Tamanho titulo */
+        @media screen and (max-width:405px) {
+
+            .navbar-title {
+                font-size: 10.6PX;
+            }
+
+        }
     </style>
 </head>
 
