--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -77,29 +77,23 @@
             border-radius: 5px;
         }
 
-        /* @media screen and (max-width: 1024px) {
-            .geral {
-                height: 100vh !important;
-            }
-        }
-
-        @media screen and (max-width: 768px) {
-            .geral {
-                height: 70vh !important;
+        @media screen and (min-width: 768px) {
+            .geral{
+                height: 90vh;
             }
         }
 
         @media screen and (max-width: 767px) {
-            .geral {
-                height: 80vh !important;
+            .geral{
+                height: 90vh;
             }
         }
 
-        @media screen and (max-width: 500px) {
-            .geral {
-                height: 100vh !important;
+        @media screen and (max-width: 375px) {
+            .geral{
+                height: 100vh;
             }
-        } */
+        }
     </style>
 </head>
 
