--- a/pages/equipedeatendimento.html
+++ b/pages/equipedeatendimento.html
@@ -32,8 +32,8 @@
         }
 
         .form-control:focus {
-            border-color: red;
-            box-shadow: 0 0 0 0.2rem rgba(241, 13, 13, 0.3);
+            border-color: rgb(6, 108, 243);
+            box-shadow: 0 0 0 0.1rem rgb(6, 108, 243);
         }
 
         /* MENU */
@@ -90,16 +90,13 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                CATEGORIAS
-                            </a>
+                                aria-expanded="false">CATEGORIAS</a>
                             <ul class="dropdown-menu dropdown-menu-dark">
                                 <li><a class="dropdown-item" href="#">TIPO DE OCORRÊNCIA</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
-                                        ENCONTRADOS SUSPEITOS</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -123,8 +120,7 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
-                                        CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -160,10 +156,24 @@
     </nav>
 
     <form action="">
-        <div class="container d-flex justify-content-center align-items-center" style="height: 80vh; gap: 5%;">
+        <div class="container d-block">
 
-            <div class="box2 container-fluid" style="padding: 20px;">
+            <div class="container-fluid col-8 col-sm-10 mt-5 mt-sm-5" id="box" style="padding: 20px;">
+                <input type="text" class="form-control" id="nome" aria-describedby="name" placeholder="M">
+                <br>
+                <input type="text" class="form-control" id="username" aria-describedby="name" placeholder="S1">
+                <br>
 
+                <input type="text" class="form-control" aria-describedby="name" placeholder="S2">
+                <br>
+
+                <input type="text" class="form-control" id="matricula" aria-describedby="name" placeholder="S3">
+                <br>
+
+                <input type="text" class="form-control" id="matricula" aria-describedby="name" placeholder="Demandante">
+            </div>
+
+            <div class="box2 container-fluid col-8 col-sm-10 mt-5 mt-sm-5" style="padding: 20px;">
                 <input type="number" class="form-control" id="nome" aria-describedby="name" placeholder="NºUSB">
                 <br>
                 <input type="number" class="form-control" id="nome" aria-describedby="name" placeholder="NºOCORRÊNCIA">
@@ -190,28 +200,12 @@
                     </label>
                 </div>
             </div>
-            <div class="container-fluid" id="box" style="padding: 20px;">
-                <input type="text" class="form-control" id="nome" aria-describedby="name" placeholder="M">
-                <br>
-                <input type="text" class="form-control" id="username" aria-describedby="name" placeholder="S1">
-                <br>
-
-                <input type="text" class="form-control" id="email" aria-describedby="name" placeholder="S2">
-                <br>
-
-                <input type="text" class="form-control" id="matricula" aria-describedby="name" placeholder="S3">
-                <br>
-
-                <input type="text" class="form-control" id="matricula" aria-describedby="name" placeholder="Demandante">
-            </div>
-
-
         </div>
     </form>
 
-    <div class="d-flex justify-content-center">
+    <div class="d-flex justify-content-center mt-5">
         <div>
-            <button class="btn btn-outline-primary btn-lg" id="botao">Retornar a tela de início</button>
+            <button class="btn btn-primary btn-lg" id="botao">Retornar a tela de início</button>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
