--- a/pages/procedimentos.html
+++ b/pages/procedimentos.html
@@ -225,6 +225,7 @@
           </div>
         </nav>
         <div class="container-fluid h-100">
+          <form action="">
             <div class="row mt-5 gap-4 justify-content-center" id="row">
                 <div class="col-4" id="col">
                     <div class="p-3 d-flex" id="check">
@@ -605,6 +606,8 @@
                 </div>
 
             </div>
+
+          </form> 
             <div class="espaço_botao">
               <div class="botao">
                   <button type="button" class="btn btn-outline-primary btn-lg">Voltar</button>
