--- a/pages/cadastro.html
+++ b/pages/cadastro.html
@@ -77,22 +77,42 @@
             border-radius: 5px;
         }
 
+        .justify-content-center{
+            margin-bottom: 20px;
+        }
+
         @media screen and (min-width: 768px) {
-            .geral{
-                height: 90vh;
+            .geral {
+                height: 74vh;
             }
         }
 
         @media screen and (max-width: 767px) {
-            .geral{
-                height: 90vh;
+            .geral {
+                height: 80vh;
             }
         }
 
         @media screen and (max-width: 375px) {
-            .geral{
+            .geral {
                 height: 100vh;
             }
+        }
+        /*  */
+        @media screen and (min-width: 200px) and (max-width:460px) {
+
+            .navbar-title {
+                font-size: 13PX;
+            }
+
+        }
+
+        @media screen and (min-width: 200px) and (max-width:405px) {
+
+            .navbar-title {
+                font-size: 10.6PX;
+            }
+
         }
     </style>
 </head>
@@ -129,7 +149,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS ENCONTRADOS SUSPEITOS</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">PROBLEMAS
+                                        ENCONTRADOS SUSPEITOS</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -153,7 +174,8 @@
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
+                                <li><a class="dropdown-item" href="#" style="white-space: break-spaces;">FORMA DE
+                                        CONDUÇÃO E DECISÃO DE TRANSPORTE</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
